--- a/thirdeye/pom.xml
+++ b/thirdeye/pom.xml
@@ -610,6 +610,22 @@
       </dependencies>
     </dependencyManagement>
     </profile>
+    <profile>
+      <id>cloudsql</id>
+      <properties>
+        <mysql.connector.version>8.0.19</mysql.connector.version>
+        <mysql-socket-factory-connector-j-8.version>1.0.15</mysql-socket-factory-connector-j-8.version>
+      </properties>
+      <dependencyManagement>
+        <dependencies>
+          <dependency>
+            <groupId>com.google.cloud.sql</groupId>
+            <artifactId>mysql-socket-factory-connector-j-8</artifactId>
+            <version>${mysql-socket-factory-connector-j-8.version}</version>
+          </dependency>
+        </dependencies>
+      </dependencyManagement>
+    </profile>
   </profiles>
 
   <reporting>
