--- a/thirdeye/pom.xml
+++ b/thirdeye/pom.xml
@@ -605,6 +605,16 @@
               <groupId>com.google.guava</groupId>
               <artifactId>guava</artifactId>
             </exclusion>
+            <!--
+            <exclusion>
+              <groupId>org.slf4j</groupId>
+              <artifactId>slf4j-api</artifactId>
+            </exclusion>
+            -->
+            <exclusion>
+              <groupId>commons-logging</groupId>
+              <artifactId>commons-logging</artifactId>
+            </exclusion>
           </exclusions>
         </dependency>
       </dependencies>
