--- a/.github/workflows/thirdeye_tests.yml
+++ b/.github/workflows/thirdeye_tests.yml
@@ -17,14 +17,14 @@
 # under the License.
 #
 
-name: Pinot Tests
+name: ThirdEye Tests
 
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ abtasty-master ]
 
 jobs:
-  unit-test:
+  te-unit-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -32,41 +32,8 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Unit Test
-        env:
-          RUN_INTEGRATION_TESTS: false
-        run: .github/workflows/scripts/.pinot_test.sh
+      - name: TE Unit Test
+        run: .github/workflows/scripts/.thirdeye_test.sh
       - name: Upload coverage to Codecov
         run: |
           bash <(curl -s https://codecov.io/bash) -cF unittests
-
-  integration-test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Integration Test
-        env:
-          RUN_INTEGRATION_TESTS: true
-        run: .github/workflows/scripts/.pinot_test.sh
-      - name: Upload coverage to Codecov
-        run: |
-          bash <(curl -s https://codecov.io/bash) -cF integration
-
-  quickstarts:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java: [ 1.8, 10, 11, 12, 13, 14, 15-ea ]
-    name: Pinot Quickstart on JDK ${{ matrix.java }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v1
-        with:
-          java-version: ${{ matrix.java }}
-      - name: Quickstart on JDK ${{ matrix.java }}
-        run: .github/workflows/scripts/.pinot_quickstart.sh
