--- a/thirdeye/pom.xml
+++ b/thirdeye/pom.xml
@@ -270,6 +270,11 @@
         <artifactId>dropwizard-redirect-bundle</artifactId>
         <version>${dropwizard.redirect.bundle.version}</version>
       </dependency>
+      <dependency>
+        <groupId>io.dropwizard</groupId>
+        <artifactId>dropwizard-json-logging</artifactId>
+        <version>${dropwizard.version}</version>
+      </dependency>
 
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
