fix dockerfile to clone single branch

--- a/quickstart/Dockerfile
+++ b/quickstart/Dockerfile
@@ -32,9 +32,8 @@ RUN mkdir -p /usr/share/maven /usr/share/maven/ref \
 ENV MAVEN_HOME /usr/share/maven
 ENV MAVEN_CONFIG /opt/.m2
 
-RUN git clone ${PINOT_GIT_URL} ${TE_BUILD_DIR} \
+RUN git clone -b ${PINOT_BRANCH} ${PINOT_GIT_URL} ${TE_BUILD_DIR} \
     && cd ${TE_BUILD_DIR}  \
-    && git checkout ${PINOT_BRANCH} \
     && cd thirdeye \
     && ./install.sh \
     && mkdir -p ${TE_HOME}/config/default \
