fix docker compose quickstart

--- a/quickstart/docker-compose.yml
+++ b/quickstart/docker-compose.yml
@@ -22,4 +22,4 @@ services:
     ports:
       - "3307:3306"
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: true
+      MYSQL_ALLOW_EMPTY_PASSWORD: "true"
