--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,9 +28,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
@@ -38,6 +36,4 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: |
-        cd thirdeye
-        mvn -T 1C clean compile package
+      run: mvn -T 1C clean compile package
