--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -24,7 +24,7 @@ tasks:
     openMode: tab-after
 
   - init: gp sync-await preparation
-    command: tmux new-session -d -s frontend './run-backend.sh'
+    command: tmux new-session -d -s backend './run-backend.sh'
     openMode: tab-after
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
